k8s/kustomize/arr/base/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media-server
spec:
  selector:
    app: sabnzbd
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 9090
    targetPort: 9090
  type: ClusterIP
